<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".view.DashboardActivity"
    android:gravity="center">


    <Button
        android:id="@+id/anagramProgremme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btn_main_round"
        android:text="@string/anagram_programme"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fibonacciNumberProgramme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btn_main_round"
        android:text="@string/fibonacci_number_programme"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/currencyConverter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btn_main_round"
        android:text="@string/currency_converter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

</LinearLayout>