<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".view.AnagramProgrammeActivity">

    <TextView
        android:id="@+id/txtCalaculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anagram_programme"
        android:textColor="@color/main_blue"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/valueOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edit_text_input_with_border"
        android:ellipsize="start"
        android:hint="@string/please_write_a_word"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        tools:ignore="LabelFor"
        android:imeOptions="actionNext"
        android:digits="abcdefghijklmnopqrstuvwxyyz "/>

    <EditText
        android:id="@+id/valueTwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edit_text_input_with_border"
        android:ellipsize="start"
        android:hint="@string/please_write_a_word"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        tools:ignore="LabelFor"
        android:imeOptions="actionDone"
        android:digits="abcdefghijklmnopqrstuvwxyyz "/>

    <Button
        android:id="@+id/applyBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btn_main_round"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />


</LinearLayout>